--- a/assets/style.css
+++ b/assets/style.css
@@ -1093,15 +1093,22 @@ video {
   font-size: 30px;
   font-weight: 400;
   padding-top:48px;
-  margin: 0 auto 24px;
+   margin: 0 auto 20px; 
   text-transform: uppercase;
 
+}
+
+.img-box{
+    height:372px;
+    width: 263px;
+     margin-left:110%; 
 }
 
 .col-12{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 auto 18%;
 }
 
 .text-center{
@@ -1112,10 +1119,14 @@ video {
 .trend-images{
   display: inline-flex;
 
+  
+
 }
 
 .row{
-  margin: 0 60px 0 60px;
+  margin: 0 60px 0 60px; 
+  
+
 }
 
 
@@ -1401,12 +1412,9 @@ span h4{
 .first-div h1{
 
   text-align: center;
-  color: rgb(34, 34, 34);
-    font-size: 30px;
-    font-weight: 400;
-    padding-top: 20px;
-    margin: 0px auto 10px;
-    text-transform: uppercase;
+  padding-top: 20px;
+  font-weight: 300;
+  
 }
 .first-div .img-div{
 
@@ -1445,26 +1453,25 @@ span h4{
   
 }
 .card-div{
-   margin-top: -120px;
+    margin-top: -140px; 
   width: 100%;
-  height: 530px;
+  /* height: 530px; */
   background-color:#f7efef;
 
 }
 .card-div h2{
 
   text-align: center;
-  padding-top: 10px;
-  /* font-size: 20px; */
+   padding-top: 10px;
   font-weight: 200;
 }
 
 .card-div .card{
 
   padding-top: 10px;
-   margin-left: 20%;
+    margin-left: 20%;
   width: 60%;
-  height: 80%;
+  /* height: 80%; */
 
   display: flex;
   justify-content: space-between;
@@ -1474,14 +1481,14 @@ span h4{
 .card-div .img-card{
 
   width: 250px;
-  height: 400px;
+  /* height: 400px; */
   background-color:#f5f5f5;
 
 }
 .card-div .img-card .img{
 
   width: 100%;
-  height: 75%;
+  /* height: 75%; */
   
 }
 .img-card span{
@@ -1497,12 +1504,12 @@ span h4{
 .img-card .img img{
 
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 .card-div .text{
 
   width: 100%;
-  height: 25%;
+  /* height: 25%; */
  
 }
 .card-div .text p{
